test/trivial/diten/printvisibleWrongValue.good
printvisibleWrongValue.chpl:2: error: the arguments to 'get visible symbols' must be literals 'true' or 'false'
