test/trivial/diten/printvisibleWrongValue.chpl
var xyzSymbol = 1;
__primitive(c"get visible symbols", c"cheese");
